rpi-cluster-gitops/apps/site-counters/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-counters
  namespace: site-counters
spec:
  selector:
    app: site-counters
  ports:
    - port: 8080
      targetPort: 8080
