rpi-cluster-gitops/apps/site-counters/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-counters
  namespace: site-counters
spec:
  ingressClassName: traefik
  rules:
    - host: miro.zip
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: site-counters
                port:
                  number: 8080
